--- a/src/maps/speakeasy.json
+++ b/src/maps/speakeasy.json
@@ -296,7 +296,7 @@
         {
          "name":"script",
          "type":"string",
-         "value":"\/dist\/script.js"
+         "value":"..\/..\/dist\/script.js"
         }],
  "renderorder":"right-down",
  "tiledversion":"1.6.0",
